# xml_bench

./: .gitignore  Cargo.toml  README.md
data/: mesh-xmlity.xml  mesh-yaserde.xml
src/: lib.rs  main.rs  mesh_instantxml.rs  mesh_instantxml_fast_float.rs  mesh_roxmltree.rs  mesh_xmlity.rs  mesh_yaserde.rs
