[package]
name = "xml_bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
xmlity = { version = "0.0.8", features = ["derive"], optional = true }
xmlity-quick-xml = { version = "0.0.8", optional = true }
yaserde = { version = "0.12.0", features = ["derive"], optional = true }
instant-xml = { git = "https://github.com/vshashi01/instant-xml", branch = "main", optional = true }
hotpath = { version = "0.4.1", optional = true }
smol = { version = "2.0.2", optional = true }
serde-roxmltree = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }


[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
criterion = { version = "0.7.0" }

[features]
default = ["instant-xml", "yaserde", "xmlity", "roxmltree", "hotpath"]
instant-xml = ["dep:instant-xml"]
yaserde = ["dep:yaserde"]
xmlity = ["dep:xmlity", "dep:xmlity-quick-xml"]
roxmltree = ["dep:serde-roxmltree", "dep:serde"]
hotpath = ["hotpath/hotpath", "dep:hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]
